# candidate-screener

./: .gitignore  Cargo.toml  Dockerfile  candidates-sample.yaml  config.yaml
helm/candidate-screener/: Chart.yaml  values.yaml
helm/candidate-screener/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  job.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
src/: candidate.rs  config.rs  error.rs  main.rs  output.rs  screening.rs  server.rs  telemetry.rs
